<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:a="http://schemas.android.com/apk/res/android"
    a:layout_width="match_parent"
    a:layout_height="match_parent"
    a:orientation="vertical"
    >

    <TextView
        a:id="@+id/header_text_view"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:gravity="center_horizontal"
        a:text="@string/price"
        a:textSize="34sp"
        a:layout_margin="10dp"

        />

    <LinearLayout
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:orientation="horizontal">


    <TextView
        a:id="@+id/sum_price_text"
        a:layout_width="wrap_content"
        a:layout_height="wrap_content"
        a:text="@string/full_price_info"
        a:textSize="20sp"
        a:layout_margin="10dp"
        />

    <TextView
        a:id="@+id/sum"
        a:layout_width="wrap_content"
        a:layout_height="wrap_content"
        a:text=""
        a:textSize="20sp"
        a:layout_marginHorizontal="10dp"
        a:layout_margin="10dp"
        a:layout_marginStart="5dp"
        a:textStyle="italic"
        />
    </LinearLayout>


    <LinearLayout
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:orientation="horizontal">
    <TextView
        a:id="@+id/avg_price_text"
        a:layout_width="wrap_content"
        a:layout_height="wrap_content"
        a:text="@string/avg_price_info"
        a:textSize="20sp"
        a:layout_margin="10dp"
        />

    <TextView
        a:id="@+id/avg"
        a:layout_width="wrap_content"
        a:layout_height="wrap_content"
        a:text=""
        a:textSize="20sp"
        a:layout_marginHorizontal="10dp"
        a:layout_margin="10dp"
        a:layout_marginStart="5dp"
        a:textStyle="italic"
        />
    </LinearLayout>

</LinearLayout>